# ORBSLAM_RTABmap

./: README.md
Presentation/: CMPUT631-ProjectProposal-V0P1.pptx
Presentation_1/: CMPUT631-ProjectProposal-V0P1.pptx
Presentation_2/: CMPUT631-ProjectProgress-V0P1.pptx  CMPUT631-ProjectProgress-V0P2.pptx  blockDiagram.pptx
Proposal/: CMPUT631_proposal_Islam_Zifei.aux  CMPUT631_proposal_Islam_Zifei.bbl  CMPUT631_proposal_Islam_Zifei.blg  CMPUT631_proposal_Islam_Zifei.fdb_latexmk  CMPUT631_proposal_Islam_Zifei.fls  CMPUT631_proposal_Islam_Zifei.out  CMPUT631_proposal_Islam_Zifei.tex  journal09.bib  journal09.bib.bak
juputer_code/: Untitled.ipynb
slamros/devel/: .catkin  local_setup.sh  setup.sh
work_area/ORB_SLAM_edited/: CameraTrajectory.txt  DS_FinalMap.txt  DS_keyFrameTransformationsInv_RM.txt  DS_keyFrameTransformations_RM.txt  DS_keyFrameTransformations_quat.txt  KeyFrameTrajectory.txt
work_area/mp2cp/: DS_FinalMapDetailed.txt  DS_keyFrameTransformationsInv_RM.txt  DS_keyFrameTransformations_RM.txt  keyFrameInfo.txt  ll0.0  ll0.0.pcd  ll1.0  ll1.0.pcd  ll10.0  ll10.0.pcd  ll100.0  ll100.0.pcd  ll101.0  ll101.0.pcd  ll102.0  ll102.0.pcd  ll103.0  ll103.0.pcd  ll104.0  ll104.0.pcd  ll105.0  ll105.0.pcd  ll106.0  ll106.0.pcd  ll107.0  ll107.0.pcd  ll108.0  ll108.0.pcd  ll109.0  ll109.0.pcd  ll11.0  ll11.0.pcd  ll110.0  ll110.0.pcd  ll111.0  ll111.0.pcd  ll112.0  ll112.0.pcd  ll113.0  ll113.0.pcd  (+453 more)
work_area/pcl_tools/: CMakeLists.txt  depth2PC_generic.cpp  pcd_write.cpp  stereo2PC_generic.cpp
work_area/pcl_tools/data/: pcl_old.cpp
(+242 files in other folders)
